# offlineLNSwitch

./: .gitignore  LICENSE  README.md  platformio.ini
.github/workflows/: main.yml
SLS/: TouchDisplaySmall.sll  TouchDisplaySmall.spj  TouchDisplaySmall_events.py
SLS/alt/: ui_events.c
SLS/alt/ProjektButton/: CMakeLists.txt
SLS/alt/screens/: ui_ScreenStart.c  ui_ScreenSwitch1.c
installer/: index.html  manifest.json.alt
installer/assets/css/: ud-styles.css
src/: globals.h  info.txt  lv_conf.h  main.cpp  todo.txt
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/images/: ui_img_1304959654.c  ui_img_166440904.c  ui_img_1668993521.c  ui_img_black_hole_small_256_schlagschatten_png.c  ui_img_black_hole_small_png.c  ui_img_borange_png.c  ui_img_bsapp256_png.c  ui_img_buttongreen136_png.c  ui_img_buttongreen_png.c  ui_img_buttongreenstart_png.c  ui_img_buttonorange136_png.c  ui_img_buttonorange_png.c  ui_img_buttonorangestart_png.c  ui_img_buttontestgreen_png.c  ui_img_buttontestorange_png.c  ui_img_chronicle_278_dasblau_png.c  ui_img_ereignishorizont_xyz_128_png.c  ui_img_gear_wheel_100pix_50p_png.c  ui_img_gear_wheel_100pix_gray_png.c  ui_img_image3163_png.c  ui_img_info_100pix_50p_png.c  ui_img_info_100pix_gray_png.c  ui_img_info_2_png.c  ui_img_offlinebitcoinswitch_svg_2023_08_24_14_52_14_0_png.c  ui_img_offlinelnswitch_png.c
src/ui/screens/: ui_Screen1.c  ui_ScreenConfig.c  ui_ScreenInfo.c  ui_ScreenPIN.c  ui_ScreenPlayground.c  ui_ScreenQRCode.c  ui_ScreenScan.c  ui_ScreenStart.c  ui_ScreenSwitch.c  ui_ScreenSwitch1.c  ui_ScreenSwitch2.c  ui_ScreenWelcome.c
(+39 files in other folders)
